--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,6 @@ li {
   list-style-type: none;
 }
 .container {
-  /* padding: 30px; */
   display: flex;
   align-items: start;
   justify-content: center;
@@ -53,7 +52,7 @@ li {
 }
 .container .confirmed-order {
   margin: 10% auto;
-  width: 30%;
+  width: 35%;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
@@ -65,7 +64,7 @@ li {
 
 .product-list-container {
   display: grid;
-  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
+
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
@@ -78,6 +77,7 @@ li {
 
 .product-showcase {
   position: relative;
+  padding-bottom: 2rem;
 }
 
 .product-showcase picture img {
@@ -90,16 +90,17 @@ li {
 
 .product-showcase button {
   position: absolute;
-  bottom: -15px;
-  left: 30px;
-  width: 175px;
-  height: 50px;
-  border-radius: 30px;
-  padding: 10px 25px;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 220px;
+  height: auto;
+  padding: 0.75rem 1.5rem;
   font-family: inherit;
-  font-size: inherit;
+  font-size: 1rem;
   font-weight: 600;
-
+  border-radius: 30px;
   transition: all 0.3s ease;
 }
 .product-showcase .add-to-cart {
@@ -111,6 +112,7 @@ li {
   align-items: center;
   justify-content: center;
   gap: 8px;
+
   cursor: pointer;
 }
 
@@ -158,7 +160,7 @@ li {
 }
 
 .desc {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .desc .category {
@@ -208,7 +210,6 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* margin-top: 10px; */
   padding: 10px 0;
   border-bottom: 1px solid #ddd;
 }
@@ -255,7 +256,6 @@ li {
 
 .cart-list-container .remove-item img {
   width: 10px;
-  /* transition: filter 0.3s ease; */
 }
 
 .cart-list-container .remove-item:hover {
@@ -387,7 +387,7 @@ li {
 
 /* MOBILE VIEW */
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 786px) {
   body {
     padding: 20px;
   }
@@ -406,10 +406,6 @@ li {
     row-gap: 50px;
   }
 
-  .product-showcase button {
-    left: 29%;
-  }
-
   .desc {
     margin-top: 20px;
   }
@@ -421,5 +417,26 @@ li {
   .container .confirmed-order {
     margin: 10% 0 auto;
     width: 100%;
+  }
+}
+
+/* TABLET SCREEN */
+@media only screen and (min-width: 786px) and (max-width: 1220px) {
+  .product-list-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .product-showcase .add-to-cart {
+    font-size: 0.8rem;
+    gap: 2px;
+  }
+  .product-showcase .add-to-cart span {
+    margin-right: 2px;
+  }
+
+  .container .confirmed-order {
+    margin: 10% auto;
+    width: 45%;
   }
 }
